{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 165,
  "lineage": "e54c0ce5-89e9-d7af-8dd1-0c923e53c7ca",
  "resources": [
    {
      "module": "module.subnet_vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-0d0d6f93ab61d54d2",
            "id": "rtb-0d0d6f93ab61d54d2",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c0953e1c18e27f60",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-public-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_internet_gateway.main",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444cd4b749ae5afc",
            "region": "us-east-1",
            "route_table_id": "rtb-06ccae9d55a57cab0",
            "subnet_id": "subnet-0dfcf829d57a5b3a0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc1.aws_subnet.private",
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b0a3dd127fa7b4c9",
            "region": "us-east-1",
            "route_table_id": "rtb-06ccae9d55a57cab0",
            "subnet_id": "subnet-0be0f05181ae58a9a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc1.aws_subnet.private",
            "module.vpc1.aws_route_table.private",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc1",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09706296349efd671",
            "region": "us-east-1",
            "route_table_id": "rtb-0d0d6f93ab61d54d2",
            "subnet_id": "subnet-0d591eaef53be76dc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc1.aws_route_table.public",
            "module.subnet_vpc1.aws_subnet.public",
            "module.vpc1.aws_internet_gateway.main",
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07660ca00c6e86460",
            "region": "us-east-1",
            "route_table_id": "rtb-0d0d6f93ab61d54d2",
            "subnet_id": "subnet-0c54e4f92abbd71aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc1.aws_route_table.public",
            "module.subnet_vpc1.aws_subnet.public",
            "module.vpc1.aws_internet_gateway.main",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0dfcf829d57a5b3a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfcf829d57a5b3a0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-private-subnet-1",
              "type": "private"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-private-subnet-1",
              "type": "private"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0be0f05181ae58a9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be0f05181ae58a9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-private-subnet-2",
              "type": "private"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-private-subnet-2",
              "type": "private"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0d591eaef53be76dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d591eaef53be76dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-public-subnet-1",
              "type": "public"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-public-subnet-1",
              "type": "public"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0c54e4f92abbd71aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c54e4f92abbd71aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-public-subnet-2",
              "type": "public"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-public-subnet-2",
              "type": "public"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-02f2df212b573a9d9",
            "id": "rtb-02f2df212b573a9d9",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f69bbd6930f96262",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-public-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ceea78403544169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_internet_gateway.main",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0440fd9652a542b4b",
            "region": "us-east-1",
            "route_table_id": "rtb-0c5c54c9a9679653a",
            "subnet_id": "subnet-084d0e6e27ea357a4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc2.aws_subnet.private",
            "module.vpc2.aws_route_table.private",
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fd227f0e5077572c",
            "region": "us-east-1",
            "route_table_id": "rtb-0c5c54c9a9679653a",
            "subnet_id": "subnet-0ffa89c8ced36d1bc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc2.aws_subnet.private",
            "module.vpc2.aws_route_table.private",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc2",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9792b13f3b028c7",
            "region": "us-east-1",
            "route_table_id": "rtb-02f2df212b573a9d9",
            "subnet_id": "subnet-0e97c8143e049deb2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc2.aws_route_table.public",
            "module.subnet_vpc2.aws_subnet.public",
            "module.vpc2.aws_internet_gateway.main",
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049967681aa54ec5f",
            "region": "us-east-1",
            "route_table_id": "rtb-02f2df212b573a9d9",
            "subnet_id": "subnet-0a1f890f428a3cbf0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnet_vpc2.aws_route_table.public",
            "module.subnet_vpc2.aws_subnet.public",
            "module.vpc2.aws_internet_gateway.main",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-084d0e6e27ea357a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084d0e6e27ea357a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-private-subnet-1",
              "type": "private"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-private-subnet-1",
              "type": "private"
            },
            "vpc_id": "vpc-05ceea78403544169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0ffa89c8ced36d1bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ffa89c8ced36d1bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-private-subnet-2",
              "type": "private"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-private-subnet-2",
              "type": "private"
            },
            "vpc_id": "vpc-05ceea78403544169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnet_vpc2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0e97c8143e049deb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e97c8143e049deb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-public-subnet-1",
              "type": "public"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-public-subnet-1",
              "type": "public"
            },
            "vpc_id": "vpc-05ceea78403544169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:subnet/subnet-0a1f890f428a3cbf0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1f890f428a3cbf0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "021891617731",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-public-subnet-2",
              "type": "public"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-public-subnet-2",
              "type": "public"
            },
            "vpc_id": "vpc-05ceea78403544169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:internet-gateway/igw-0c0953e1c18e27f60",
            "id": "igw-0c0953e1c18e27f60",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-igw"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-igw"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-06ccae9d55a57cab0",
            "id": "rtb-06ccae9d55a57cab0",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-private-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-09bf2f060ac43f5e2",
            "id": "rtb-09bf2f060ac43f5e2",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0c0953e1c18e27f60",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-public-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_internet_gateway.main",
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:security-group/sg-0d6584d4c2af204f2",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6584d4c2af204f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "203.0.113.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-terraform-multi-vpc-primary-web-sg20250826034431013000000006",
            "name_prefix": "aws-terraform-multi-vpc-primary-web-sg",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary-web-sg"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc1",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:vpc/vpc-02b379eab947b40ee",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f345bd5c21e40f92",
            "default_route_table_id": "rtb-02d86ad9db365bdaf",
            "default_security_group_id": "sg-0d3df2e6fd04b13e0",
            "dhcp_options_id": "dopt-0b895979daa0a4f81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02b379eab947b40ee",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d86ad9db365bdaf",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-primary"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-primary"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:internet-gateway/igw-0f69bbd6930f96262",
            "id": "igw-0f69bbd6930f96262",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-igw"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-igw"
            },
            "vpc_id": "vpc-05ceea78403544169"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-0c5c54c9a9679653a",
            "id": "rtb-0c5c54c9a9679653a",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-private-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ceea78403544169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:route-table/rtb-0f46e794062f5969d",
            "id": "rtb-0f46e794062f5969d",
            "owner_id": "021891617731",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": null,
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": null,
                "destination_prefix_list_id": null,
                "egress_only_gateway_id": null,
                "gateway_id": "igw-0f69bbd6930f96262",
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_endpoint_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-public-rt"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ceea78403544169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_internet_gateway.main",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:security-group/sg-0da002a22a96bcb2d",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da002a22a96bcb2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "203.0.113.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "aws-terraform-multi-vpc-secondary-web-sg20250826034430977100000004",
            "name_prefix": "aws-terraform-multi-vpc-secondary-web-sg",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary-web-sg"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-05ceea78403544169"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:021891617731:vpc/vpc-05ceea78403544169",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-01f40d29e1d2ebfb9",
            "default_route_table_id": "rtb-0f5baf0f720c5db84",
            "default_security_group_id": "sg-08afd4b4f7f2db21d",
            "dhcp_options_id": "dopt-0b895979daa0a4f81",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05ceea78403544169",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f5baf0f720c5db84",
            "owner_id": "021891617731",
            "region": "us-east-1",
            "tags": {
              "Name": "aws-terraform-multi-vpc-secondary"
            },
            "tags_all": {
              "Name": "aws-terraform-multi-vpc-secondary"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc_peering[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09bf2f060ac43f5e23322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09bf2f060ac43f5e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0581ac71048811ec5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_internet_gateway.main",
            "module.vpc1.aws_route_table.public",
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_vpc.main",
            "module.vpc_peering.aws_vpc_peering_connection.vpc-connection"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering[0]",
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f46e794062f5969d179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0f46e794062f5969d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0581ac71048811ec5"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_internet_gateway.main",
            "module.vpc2.aws_route_table.public",
            "module.vpc2.aws_vpc.main",
            "module.vpc_peering.aws_vpc_peering_connection.vpc-connection"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_peering[0]",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0581ac71048811ec5",
            "peer_owner_id": "021891617731",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-05ceea78403544169",
            "region": "us-east-1",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "VPC Peering Connection"
            },
            "tags_all": {
              "Name": "VPC Peering Connection"
            },
            "vpc_id": "vpc-02b379eab947b40ee"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc1.aws_vpc.main",
            "module.vpc2.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}